code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Account_Private_Info__c.field-meta.xml
<CustomField>
    <fullName>Account_Private_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>客戶非公開資訊</label>
    <referenceTo>Account_Private_Info__c</referenceTo>
    <relationshipLabel>Account Account Relations</relationshipLabel>
    <relationshipName>Account_Account_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>