code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/AccountOwner_AAR_NET__c.field-meta.xml
<CustomField>
    <fullName>AccountOwner_AAR_NET__c</fullName>
    <formula>TEXT(FinServ__Account__r.Unit__c) != TEXT(Record_Unit__c)</formula>
    <label>帳戶所屬單位與關係所屬單位不同</label>
    <type>Checkbox</type>
</CustomField>