code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Affiliate_Code__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Code__c</fullName>
    <inlineHelpText>A. 有控制與從屬關係
B. 有相互投資關係 
C. 董事長 (或代表公司董事、執行業務股東) 或總經理與他公司之董事長 (或代表公司董事、執行業務股東) 或總經理為同一人或具配偶關係者
D. 其他</inlineHelpText>
    <label>關係企業代號</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>