code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Automatic_Created__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動建立資料</label>
    <type>Checkbox</type>
</CustomField>