code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/CUB_External_Id__c.field-meta.xml
<CustomField>
    <fullName>CUB_External_Id__c</fullName>
    <description>關係key值，不使用原生FSC package的external id欄位</description>
    <externalId>true</externalId>
    <label>CUB External ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>