code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <defaultValue>DATEVALUE(&quot;2199-01-01&quot;)</defaultValue>
    <label>迄日</label>
    <type>Date</type>
</CustomField>