code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/FinServ__TotalSharePercent__c.field-meta.xml
<CustomField>
    <fullName>FinServ__TotalSharePercent__c</fullName>
    <description>The total percentage of shares owned by the stakeholder, combining both direct and indirect ownership.</description>
    <label>Total Share Percent</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>