code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Last_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Last_Data_Source__c</fullName>
    <label>最近資料來源</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Data_Source</valueSetName>
    </valueSet>
</CustomField>