code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Other_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Other_Payment_Method__c</fullName>
    <label>其他結帳方式說明</label>
    <length>100</length>
    <type>Text</type>
</CustomField>