code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Other_Transaction_Method__c.field-meta.xml
<CustomField>
    <fullName>Other_Transaction_Method__c</fullName>
    <label>其他交易方式說明</label>
    <length>100</length>
    <type>Text</type>
</CustomField>