code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Owner_AAR_NET__c.field-meta.xml
<CustomField>
    <fullName>Owner_AAR_NET__c</fullName>
    <formula>TEXT(Owner:User.Unit__c) != TEXT(Record_Unit__c)</formula>
    <label>關係擁有者與關係所屬單位不同</label>
    <type>Checkbox</type>
</CustomField>