code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Parties_Code__c.field-meta.xml
<CustomField>
    <fullName>Parties_Code__c</fullName>
    <label>關係代號</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>8001</fullName>
                <label>8001 父</label>
            </value>
            <value>
                <fullName>8002</fullName>
                <label>8002 母</label>
            </value>
            <value>
                <fullName>8003</fullName>
                <label>8003 子</label>
            </value>
            <value>
                <fullName>8004</fullName>
                <label>8004 女兒</label>
            </value>
            <value>
                <fullName>8005</fullName>
                <label>8005 祖父</label>
            </value>
            <value>
                <fullName>8006</fullName>
                <label>8006 祖母</label>
            </value>
            <value>
                <fullName>8007</fullName>
                <label>8007 外祖父</label>
            </value>
            <value>
                <fullName>8008</fullName>
                <label>8008 外祖母</label>
            </value>
            <value>
                <fullName>8009</fullName>
                <label>8009 兄弟</label>
            </value>
            <value>
                <fullName>8010</fullName>
                <label>8010 姊妹</label>
            </value>
            <value>
                <fullName>8011</fullName>
                <label>8011 孫</label>
            </value>
            <value>
                <fullName>8012</fullName>
                <label>8012 孫女</label>
            </value>
            <value>
                <fullName>8013</fullName>
                <label>8013 外孫</label>
            </value>
            <value>
                <fullName>8014</fullName>
                <label>8014 外孫女</label>
            </value>
            <value>
                <fullName>8031</fullName>
                <label>8031 配偶</label>
            </value>
            <value>
                <fullName>8201</fullName>
                <label>8201 董事長</label>
            </value>
            <value>
                <fullName>8202</fullName>
                <label>8202 副董事長</label>
            </value>
            <value>
                <fullName>8203</fullName>
                <label>8203 總經理</label>
            </value>
            <value>
                <fullName>8204</fullName>
                <label>8204 副總經理</label>
            </value>
            <value>
                <fullName>8253</fullName>
                <label>8253 獨資行號負責人</label>
            </value>
            <value>
                <fullName>8264</fullName>
                <label>8264 名譽董事長</label>
            </value>
            <value>
                <fullName>8265</fullName>
                <label>8265 董事</label>
            </value>
            <value>
                <fullName>8267</fullName>
                <label>8267 常務董事</label>
            </value>
            <value>
                <fullName>8268</fullName>
                <label>8268 常駐監察人</label>
            </value>
            <value>
                <fullName>8269</fullName>
                <label>8269 監察人</label>
            </value>
            <value>
                <fullName>8280</fullName>
                <label>8280 局長</label>
            </value>
            <value>
                <fullName>8282</fullName>
                <label>8282 理事主席</label>
            </value>
            <value>
                <fullName>8283</fullName>
                <label>8283 合夥人</label>
            </value>
            <value>
                <fullName>8284</fullName>
                <label>8284 清算人</label>
            </value>
            <value>
                <fullName>8285</fullName>
                <label>8285 監事</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>