code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <inlineHelpText>若選擇「其他」，請先填寫「其他結帳方式說明」欄位</inlineHelpText>
    <label>結帳方式</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C1</fullName>
                <label>月結</label>
            </value>
            <value>
                <fullName>C2</fullName>
                <label>2個月結</label>
            </value>
            <value>
                <fullName>C3</fullName>
                <label>出貨後</label>
            </value>
            <value>
                <fullName>C4</fullName>
                <label>其他</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>