code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <label>收付款天期</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>