code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Private_Customer_Information__c.field-meta.xml
<CustomField>
    <fullName>Private_Customer_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Private Customer Information</label>
    <referenceTo>Private_Customer_Information__c</referenceTo>
    <relationshipLabel>Account Account Relations</relationshipLabel>
    <relationshipName>Account_Account_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>