code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Record_Unit__c.field-meta.xml
<CustomField>
    <fullName>Record_Unit__c</fullName>
    <label>資料所屬區部</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_Name</valueSetName>
    </valueSet>
</CustomField>