code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/RecordType_Code__c.field-meta.xml
<CustomField>
    <fullName>RecordType_Code__c</fullName>
    <formula>CASE(RecordType.DeveloperName,
  &apos;Group&apos;, &apos;RS1&apos;,
  &apos;Affiliate&apos;, &apos;RS2&apos;,
  &apos;RelatedParties&apos;, &apos;RS3&apos;,
  &apos;SupplyChain&apos;, &apos;RS4&apos;,
  &apos;ShareHoldings&apos;, &apos;RS5&apos;, 
  &quot;&quot;)</formula>
    <label>Record Type Code</label>
    <type>Text</type>
</CustomField>