code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Related_Party__c.field-meta.xml
<CustomField>
    <fullName>Related_Party__c</fullName>
    <defaultValue>false</defaultValue>
    <label>是否為關係人</label>
    <type>Checkbox</type>
</CustomField>