code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Relation_Record_Key__c.field-meta.xml
<CustomField>
    <fullName>Relation_Record_Key__c</fullName>
    <formula>RecordType.DeveloperName &amp;
TEXT(FinServ__Account__r.Customer_Data_Country__c) &amp; 
TEXT(FinServ__Account__r.Identification_Type__c) &amp; 
FinServ__Account__r.Customer_ID__c &amp;
TEXT(FinServ__RelatedAccount__r.Customer_Data_Country__c) &amp;
TEXT(FinServ__RelatedAccount__r.Identification_Type__c) &amp;
FinServ__RelatedAccount__r.Customer_ID__c &amp;
IF(RecordType.DeveloperName = &quot;RelatedParties&quot;, TEXT(Parties_Code__c), &quot;&quot;) &amp; 
IF(RecordType.DeveloperName = &quot;SupplyChain&quot;, TEXT(FinServ__Role__r.SupplyChain_Type__c), &quot;&quot;) &amp;
IF(RecordType.DeveloperName = &quot;SupplyChain&quot;, Year__c, &quot;&quot;) &amp;
IF(RecordType.DeveloperName = &quot;Affiliate&quot;, 
  IF(INCLUDES(Affiliate_Code__c, &quot;A&quot;), &quot;A&quot;, &quot;&quot;) &amp;
  IF(INCLUDES(Affiliate_Code__c, &quot;B&quot;), &quot;B&quot;, &quot;&quot;) &amp;
  IF(INCLUDES(Affiliate_Code__c, &quot;C&quot;), &quot;C&quot;, &quot;&quot;) 
, &quot;&quot;)</formula>
    <label>關係Key值</label>
    <type>Text</type>
</CustomField>