code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Shareholding_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Shareholding_Ratio__c</fullName>
    <label>持股比例</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>