code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>起始日</label>
    <type>Date</type>
</CustomField>