code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Transaction_Items__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Items__c</fullName>
    <label>進銷貨項目</label>
    <length>20</length>
    <type>Text</type>
</CustomField>