code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Transaction_Method__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Method__c</fullName>
    <inlineHelpText>若選擇其他，請先填寫「其他交易方式說明」欄位</inlineHelpText>
    <label>交易方式</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T1</fullName>
                <label>T/T</label>
            </value>
            <value>
                <fullName>T2</fullName>
                <label>L/C</label>
            </value>
            <value>
                <fullName>T3</fullName>
                <label>現金</label>
            </value>
            <value>
                <fullName>T4</fullName>
                <label>期票</label>
            </value>
            <value>
                <fullName>T5</fullName>
                <label>其他</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>