code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Transaction_Period__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Period__c</fullName>
    <label>往來期間(年)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>