code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/recordTypes/Affiliate.recordType-meta.xml
<RecordType>
    <fullName>Affiliate</fullName>
    <active>true</active>
    <label>關係企業</label>
</RecordType>