code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/recordTypes/Group.recordType-meta.xml
<RecordType>
    <fullName>Group</fullName>
    <active>true</active>
    <label>集團</label>
</RecordType>