code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/recordTypes/RelatedParties.recordType-meta.xml
<RecordType>
    <fullName>RelatedParties</fullName>
    <active>true</active>
    <label>關係人</label>
</RecordType>