code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/recordTypes/ShareHoldings.recordType-meta.xml
<RecordType>
    <fullName>ShareHoldings</fullName>
    <active>true</active>
    <label>持股比例關係</label>
</RecordType>