code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/recordTypes/SupplyChain.recordType-meta.xml
<RecordType>
    <fullName>SupplyChain</fullName>
    <active>true</active>
    <label>進銷貨廠商</label>
</RecordType>