code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/validationRules/CUB_AffiliateRelationAccountType.validationRule-meta.xml
<ValidationRule>
    <fullName>CUB_AffiliateRelationAccountType</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  RecordType.DeveloperName = &quot;Affiliate&quot;, 
  OR(
    FinServ__Account__r.RecordType.DeveloperName != &quot;Company&quot;,
    FinServ__RelatedAccount__r.RecordType.DeveloperName != &quot;Company&quot;
  )
)</errorConditionFormula>
    <errorMessage>關係企業為兩法人間的關係</errorMessage>
</ValidationRule>