code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/validationRules/CUB_PaymentMethodReasonNoteIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CUB_PaymentMethodReasonNoteIsRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Payment_Method__c, &quot;C4&quot;),
  Other_Payment_Method__c = NULL
)</errorConditionFormula>
    <errorMessage>若「結帳方式」選擇「其他」，請先填寫「其他結帳方式說明」</errorMessage>
</ValidationRule>