code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/validationRules/CUB_TransactionMethodNoteIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CUB_TransactionMethodNoteIsRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Transaction_Method__c, &quot;T5&quot;),
  Other_Transaction_Method__c = NULL
)</errorConditionFormula>
    <errorMessage>若「交易方式」選擇「其他」，請先填寫「其他交易方式說明」</errorMessage>
</ValidationRule>