code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/validationRules/FinServ__AccountAndRelatedAccountCannotBeSame.validationRule-meta.xml
<ValidationRule>
    <fullName>FinServ__AccountAndRelatedAccountCannotBeSame</fullName>
    <active>true</active>
    <errorConditionFormula>FinServ__Account__c = FinServ__RelatedAccount__c</errorConditionFormula>
    <errorMessage>Account and Related Account must be different entities.</errorMessage>
</ValidationRule>