code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/validationRules/FinServ__InactiveAARCannotBeEdited.validationRule-meta.xml
<ValidationRule>
    <fullName>FinServ__InactiveAARCannotBeEdited</fullName>
    <active>false</active>
    <errorConditionFormula>AND(PRIORVALUE(FinServ__Active__c) == false,NOT(ISNEW()))</errorConditionFormula>
    <errorMessage>Inactive record can&apos;t be edited. To update relationship information, you can create a new one.</errorMessage>
</ValidationRule>