code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FinServ__Account__c</columns>
    <columns>FinServ__RelatedAccount__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Record_Unit__c</columns>
    <columns>Owner_AAR_NET__c</columns>
    <columns>AccountOwner_AAR_NET__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FinServ__Account__c</field>
        <operation>equals</operation>
        <value>法人A</value>
    </filters>
    <label>All</label>
</ListView>