code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/listViews/FinServ__All.listView-meta.xml
<ListView>
    <fullName>FinServ__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>RecordType_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>