code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/listViews/X604_AccountAccountRelation.listView-meta.xml
<ListView>
    <fullName>X604_AccountAccountRelation</fullName>
    <filterScope>Queue</filterScope>
    <label>VN Branch</label>
    <queue>X604</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>