code/force-app/main/default/objects/FinServ__AccountAccountRelation__c/listViews/X731_AccountAccountRelation.listView-meta.xml
<ListView>
    <fullName>X731_AccountAccountRelation</fullName>
    <filterScope>Queue</filterScope>
    <label>中一區</label>
    <queue>X731</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>